[package]
name = "advent-of-code"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.66", features = ["backtrace"] }
clap = { version = "4.0.29", features = ["cargo"] }
dialoguer = "0.10.2"
indicatif = "0.17.2"
itertools = "0.10.5"
snake_helper = "0.1.0"
